--- a/gdx-fontpack/.classpath
+++ b/gdx-fontpack/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="libs/gdx-natives.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-freetype.jar"/>
 	<classpathentry kind="lib" path="libs/gdx.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-freetype-sources.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
